SO-1702: Make use of java's internal int cache
https://snowowl.atlassian.net/browse/SO-1702